Make the growth factor a function of summer length

--- a/03-post-process/output-plots.Rmd
+++ b/03-post-process/output-plots.Rmd
@@ -309,9 +309,9 @@ summs_out = rbind(summs_out, do.call(rbind, tmp_summ))
 
 # growth from summer to spring
 # summer parr mean length
-L1 = "Summer to Spring Growth"
-L2 = c("Mean", "Process SD", "Among-pop Correlation", "Realized")
-match = c("mu_growth", "sig_lgrowth", "rho_lgrowth", "^growth[")
+L1 = "Summer to Spring 'Growth Factor'"
+L2 = c("Intercept", "Slope", "Process SD", "Among-pop Correlation", "Realized")
+match = c("int_lgrowth", "slp_lgrowth", "sig_lgrowth", "rho_lgrowth", "^growth[")
 tmp_diags = lapply(1:length(match), function(i) summarize_posterior(match[i], L1 = L1, L2 = L2[i]))
 tmp_summ = lapply(tmp_diags, function(i) summarize_diags(i))
 diags_out = rbind(diags_out, do.call(rbind, tmp_diags))
@@ -1978,7 +1978,7 @@ mtext(side = 2, outer = T, line = 0.25, TeX("$Mean\\,Length\\,at\\,Summer\\,Tagg
 
 ## Spring Length {.tabset .tabset-pills}
 
-### Spring vs. Summer Length
+### "Growth Factor" vs. Summer Length
 
 ```{r}
 plot_f = function(j) {
@@ -1988,61 +1988,63 @@ plot_f = function(j) {
   L_Pb_lwr = post_summ(post, sub_index("^L_Pb[year,pop]", year = ts_yrs, pop = j))["2.5%",]
   L_Pb_upr = post_summ(post, sub_index("^L_Pb[year,pop]", year = ts_yrs, pop = j))["97.5%",]
   
-  # extract posterior summaries of spring length outcomes
-  L_Mb_mean = post_summ(post, sub_index("^L_Mb[year,pop]", year = ts_yrs, pop = j))["mean",]
-  L_Mb_lwr = post_summ(post, sub_index("^L_Mb[year,pop]", year = ts_yrs, pop = j))["2.5%",]
-  L_Mb_upr = post_summ(post, sub_index("^L_Mb[year,pop]", year = ts_yrs, pop = j))["97.5%",]
+  # extract posterior summaries of growth outcomes
+  growth_mean = post_summ(post, sub_index("^growth[year,pop]", year = ts_yrs, pop = j))["mean",]
+  growth_lwr = post_summ(post, sub_index("^growth[year,pop]", year = ts_yrs, pop = j))["2.5%",]
+  growth_upr = post_summ(post, sub_index("^growth[year,pop]", year = ts_yrs, pop = j))["97.5%",]
   
-  # create a vector of scaled egg abundances to calculate at
+  # create a vector of scaled summer lengths to calculate at
   L_Pb_seq = seq(min(L_Pb_lwr), max(L_Pb_upr), length = 30)
+  L_Pb_star_seq = (L_Pb_seq - jags_data$L_Pb_center[j])/jags_data$L_Pb_scale[j]
 
   # extract posteriors of coefficients
-  mu_growth = post_subset(post, sub_index("mu_growth[pop]", pop = j), matrix = TRUE)
+  int_lgrowth = post_subset(post, sub_index("int_lgrowth[pop]", pop = j), matrix = TRUE)
+  slp_lgrowth = post_subset(post, sub_index("slp_lgrowth[pop]", pop = j), matrix = TRUE)
 
-  # function to create predicted survival curves for one posterior sample
+  # function to create predicted curves for one posterior sample
   pred_fn = function(i) {
-    pred_L_Mb = L_Pb_seq * mu_growth[i]
-    names(pred_L_Mb) = paste0("pred_L_Mb[", 1:30, "1]")
-    pred_L_Mb
+    pred_growth = exp(int_lgrowth[i] + slp_lgrowth[i] * L_Pb_star_seq)
+    names(pred_growth) = paste0("pred_growth[", 1:30, "1]")
+    pred_growth
   }
   
-  # calculate predicted survivals and add to posterior samples
-  pred_L_Mb = t(sapply(1:post_dim(post, "saved"), pred_fn))
-  post_pred_L_Mb = post_convert(cbind(postpack:::id_mat(post), pred_L_Mb))
+  # calculate predicted growth values and add to posterior samples
+  pred_growth = t(sapply(1:post_dim(post, "saved"), pred_fn))
+  post_pred_growth = post_convert(cbind(postpack:::id_mat(post), pred_growth))
   
-  # extract summarize predicted length
-  pred_L_Mb_mean = post_summ(post_pred_L_Mb, "")["mean",]
-  pred_L_Mb_lwr = post_summ(post_pred_L_Mb, "")["2.5%",]
-  pred_L_Mb_upr = post_summ(post_pred_L_Mb, "")["97.5%",]
+  # extract summarize predicted growth
+  pred_growth_mean = post_summ(post_pred_growth, "")["mean",]
+  pred_growth_lwr = post_summ(post_pred_growth, "")["2.5%",]
+  pred_growth_upr = post_summ(post_pred_growth, "")["97.5%",]
   
   # make a blank plot with the correct dimensions
   par(mgp = c(2,0.35, 0), tcl = -0.15, mar = c(1,1,2,1))
   plot(1,1, type = "n", 
-       ylim = range(pred_L_Mb_lwr, pred_L_Mb_upr, L_Mb_lwr, L_Mb_upr, na.rm = T),
+       ylim = range(pred_growth_lwr, pred_growth_upr, growth_lwr, growth_upr, na.rm = TRUE),
        xlim = range(L_Pb_seq), 
        main = pops[j]
   )
     
   # expected relationship
-  polygon(c(L_Pb_seq, rev(L_Pb_seq)), c(pred_L_Mb_lwr, rev(pred_L_Mb_upr)), border = NA, col = alpha("salmon", 0.5))
-  lines(pred_L_Mb_lwr ~ L_Pb_seq, col = "red", lty = 2)
-  lines(pred_L_Mb_upr ~ L_Pb_seq, col = "red", lty = 2)
-  lines(pred_L_Mb_mean ~ L_Pb_seq, col = "red", lwd = 2)
+  polygon(c(L_Pb_seq, rev(L_Pb_seq)), c(pred_growth_lwr, rev(pred_growth_upr)), border = NA, col = alpha("salmon", 0.5))
+  lines(pred_growth_lwr ~ L_Pb_seq, col = "red", lty = 2)
+  lines(pred_growth_upr ~ L_Pb_seq, col = "red", lty = 2)
+  lines(pred_growth_mean ~ L_Pb_seq, col = "red", lwd = 2)
   
   # realized pairs
-  segments(L_Pb_lwr, L_Mb_mean, L_Pb_upr, L_Mb_mean, col = alpha("red", 0.5))
-  segments(L_Pb_mean, L_Mb_lwr, L_Pb_mean, L_Mb_upr, col = alpha("red", 0.5))
-  points(L_Mb_mean ~ L_Pb_mean, pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
+  segments(L_Pb_lwr, growth_mean, L_Pb_upr, growth_mean, col = alpha("red", 0.5))
+  segments(L_Pb_mean, growth_lwr, L_Pb_mean, growth_upr, col = alpha("red", 0.5))
+  points(growth_mean ~ L_Pb_mean, pch = 21, col = "red", bg = alpha("salmon", 0.5), cex = 1.2)
   
 }
 
 par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
 junk = sapply(1:jags_data$nj, plot_f)
 mtext(side = 1, outer = T, line = 0.25, TeX("$Mean\\,Length\\,at\\,Summer\\,Tagging\\,(mm)$"))
-mtext(side = 2, outer = T, line = 0.25, TeX("$Mean\\,Length\\,at\\,Spring\\,Tagging\\,(mm)$"))
+mtext(side = 2, outer = T, line = 0.25, TeX("$Summer\\,Parr \\rightarrow Spring\\,Smolt\\,Growth\\, Factor$"))
 ```
 
-### Growth Rate
+### "Growth Factor" Time Series
 
 ```{r}
 plot_f = function(j) {
@@ -2059,7 +2061,7 @@ plot_f = function(j) {
 par(mfrow = c(2,2), oma = c(1.5,1.5,0,0))
 junk = sapply(1:jags_data$nj, plot_f)
 mtext(side = 1, outer = T, line = 0.25, "Brood Year")
-mtext(side = 2, outer = T, line = 0.25, TeX("$Summer\\,Parr \\rightarrow Spring\\,Smolt\\Growth$"))
+mtext(side = 2, outer = T, line = 0.25, TeX("$Summer\\,Parr \\rightarrow Spring\\,Smolt\\,Growth\\, Factor$"))
 ```
 
 # Length-Based Survival Relationships {.tabset .tabset-pills}
@@ -2706,7 +2708,7 @@ rownames(rho_summs) = NULL
 rho_names = c(
   "rho_Lphi_E_Pb[2,1]" = "Egg-to-Parr Survival",
   "rho_lL_Pb[2,1]" = "Summer Mean Length",
-  "rho_lgrowth[2,1]" = "Summer to Spring Growth",
+  "rho_lgrowth[2,1]" = "Summer to Spring 'Growth Factor'",
   "rho_Lpi[2,1]" = "Mig. Strategy Apportionment",
   "rho_Lphi_Ma_O0[2,1]" = "LGR to Ocean Survival",
   "rho_Lphi_O0_O1[2,1]" = "Yr1 Ocean Survival",
@@ -2956,7 +2958,7 @@ oma_labels("Brood Year", "logit(Over-winter Survival [Spring Migrants]) Residual
 proc_error_ests = rbind(proc_error_ests, do.call(rbind, tmp))
 ```
 
-#### Summer Parr to Spring Smolt Growth
+#### Summer Parr to Spring Smolt "Growth Factor"
 
 ```{r growth-noise, fig.width = 6, fig.height = 5}
 my_par()
@@ -3076,7 +3078,7 @@ proc_error_ests$param = stringr::str_replace(proc_error_ests$param, "Lphi_E_Pb_r
 proc_error_ests$param = stringr::str_replace(proc_error_ests$param, "lL_Pb_resid\\[year,pop\\]", "Summer Parr Length")
 proc_error_ests$param = stringr::str_replace(proc_error_ests$param, "Lpi_resid\\[year,pop\\]", "Migratory Strategy Apportionment")
 proc_error_ests$param = stringr::str_replace(proc_error_ests$param, "Lphi_Pa_Mb_resid\\[year,LH_type,pop\\]", "Overwinter Survival")
-proc_error_ests$param = stringr::str_replace(proc_error_ests$param, "lgrowth_resid\\[year,pop\\]", "Summer to Spring Growth")
+proc_error_ests$param = stringr::str_replace(proc_error_ests$param, "lgrowth_resid\\[year,pop\\]", "Summer to Spring 'Growth Factor'")
 proc_error_ests$param = stringr::str_replace(proc_error_ests$param, "Lphi_Mb_Ma_resid\\[year,origin,pop\\]", "Trib to LGR Survival")
 proc_error_ests$param = stringr::str_replace(proc_error_ests$param, "Lphi_Ma_O0_resid\\[year,origin\\]", "LGR to BON Survival")
 proc_error_ests$param = stringr::str_replace(proc_error_ests$param, "Lphi_O0_O1_resid\\[year,origin,pop\\]", "Yr1 Ocean Survival")
@@ -3104,7 +3106,7 @@ proc_error_ests$origin = c("NOR", "HOR", "Combined")[proc_error_ests$origin]
 proc_error_ests$LH_type = c("Fall Mig.", "Spring Mig.", "Combined")[proc_error_ests$LH_type]
 
 # which processes are in each life phase?
-fw_juv = c("Egg to Parr Survival", "Summer Parr Length", "Migratory Strategy Apportionment", "Overwinter Survival", "Summer to Spring Growth", "Trib to LGR Survival", "LGR to BON Survival")
+fw_juv = c("Egg to Parr Survival", "Summer Parr Length", "Migratory Strategy Apportionment", "Overwinter Survival", "Summer to Spring 'Growth Factor'", "Trib to LGR Survival", "LGR to BON Survival")
 sw_juv = c("Yr1 Ocean Survival", "Pr(Mature Age-3)", "Pr(Mature Age-4)")
 fw_adult = c("BON to LGR Survival", "Pre-spawn Survival")
 
